[package]
name = "mime-test"
version = "0.1.0"
authors = ["Daniel Parks <oss-mime-test@demonhorse.org>"]
description = ""
homepage = "https://github.com/danielparks/mime-test"
repository = "https://github.com/danielparks/mime-test"
readme = "README.md"
exclude = [".*", "/release.sh"]
keywords = []
categories = [] # https://crates.io/category_slugs
license = "MIT OR Apache-2.0"
rust-version = "1.57" # panic in const context
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]

[dev-dependencies]
