[package]
name = "mime_const"
version = "0.1.0"
authors = ["Daniel Parks <oss-mime_const@demonhorse.org>"]
description = ""
homepage = "https://github.com/danielparks/mime_const"
repository = "https://github.com/danielparks/mime_const"
readme = "README.md"
exclude = [".*", "/release.sh"]
keywords = []
categories = [] # https://crates.io/category_slugs
license = "MIT OR Apache-2.0"
rust-version = "1.57" # panic! in const context
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
konst = { version = "=0.2.19", default-features = false }

[dev-dependencies]
